# QUALL_SCANNER_TRADING

./: .gitignore  ERRORES_TUI_DESKTOP.md  OPERACION.md  especificaciones.md  especificaciones_web.md  launch-tui.sh  pyproject.toml  start-web.sh
config/: settings.toml
config/scans/: friday_gainers.toml  high_trending.toml  one_month_gainers.toml  one_year_losers.toml  qullamaggie_setup.toml  two_year_losers.toml
src/momo/: __main__.py  main.py
src/momo/alerts/: telegram_alerts.py
src/momo/charts/: candlestick.py
src/momo/data/: ingest.py
src/momo/data/providers/: fmp_provider.py  nasdaq_ftp.py  yfinance_provider.py
src/momo/indicators/: adr_percent.py  price_rank.py  trend_intensity.py
src/momo/scanner/: engine.py  filters.py  loader.py
src/momo/scoring/: composite.py
src/momo/ui/: app.py  styles.tcss
src/momo/ui/screens/: dashboard.py  scan_result.py  symbol_detail.py  watchlist.py
src/momo/ui/widgets/: indicator_panel.py  result_table.py  scan_table.py
src/momo/watchlist/: manager.py
src/momo/web/: __init__.py  app.py  dependencies.py
src/momo/web/routes/: dashboard.py  scan.py  symbol.py  watchlist.py
src/momo/web/static/: app.js  styles.css
src/momo/web/templates/: base.html  dashboard.html  error.html  scan_charts.html  scan_detail.html  symbol_detail.html  watchlist_detail.html  watchlists.html
