[project]
name = "momo-scanner"
version = "0.1.0"
description = "Momentum stock scanner inspired by Qullamaggie's methodology"
requires-python = ">=3.12"

[project.dependencies]
pandas = ">=2.2"
numpy = ">=1.26"
pandas-ta = ">=0.3"
requests = ">=2.31"
apscheduler = ">=3.10"
python-telegram-bot = ">=21"
mplfinance = ">=0.12"
plotly = ">=5.22"
textual = ">=0.80"
rich = ">=13.7"
tomli = ">=2.0"

[project.optional-dependencies]
web = ["fastapi>=0.111", "uvicorn>=0.30", "jinja2>=3.1"]
polygon = ["websocket-client>=1.8"]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
momo = "momo.main:cli"
